add: update article with ngrx

--- a/src/app/article/components/article.component.html
+++ b/src/app/article/components/article.component.html
@@ -15,7 +15,7 @@
         </div>
         <span *ngIf="data.isAuthor">
           <a
-            [routerLink]="['/articles', data.article.slug, 'edit']"
+            [routerLink]="['/articles', data.article.slug, 'update']"
             class="btn btn-outline-secondary btn-sm"
           >
             <i class="ion-edit"></i>
