add: user edit settings

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -22,7 +22,7 @@
             </fieldset>
             <fieldset class="form-group">
               <input
-                type="pasword"
+                type="password"
                 class="form-control form-control-lg"
                 placeholder="Password"
                 formControlName="password"
