--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -30,7 +30,7 @@
             </fieldset>
             <fieldset class="form-group">
               <input
-                type="pasword"
+                type="password"
                 class="form-control form-control-lg"
                 placeholder="Password"
                 formControlName="password"
